@@ -1,3 +1,9 @@
+2013-11-18  Anton Kolesov  <anton.kolesov@synopsys.com>
+
+	* build-elf32.sh, build-uclibc.sh: If PDF docs build failed, suggest
+	user to read Prerequisites section of documentation or use option
+	--no-pdf.
+
 2013-11-12  Anton Kolesov  <anton.kolesov@synopsys.com>
 
 	* build-all.sh: Fix reference to section from readme, invalid name has
